--- a/Diploma2/Diploma2.csproj
+++ b/Diploma2/Diploma2.csproj
@@ -8,12 +8,13 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Diploma2</RootNamespace>
     <AssemblyName>Diploma2</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -138,22 +139,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Downloads\selen\source\Selen.Wpf.Core\Selen.Wpf.Core.csproj">
-      <Project>{c94c1bdd-11f9-4a3f-8929-86b1b67ae1d5}</Project>
-      <Name>Selen.Wpf.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Downloads\selen\source\Selen.Wpf.GenericAppTree.Contracts\Selen.Wpf.GenericAppTree.Contracts.csproj">
-      <Project>{fc32ab02-5705-48e0-bcfd-78eb6c137aeb}</Project>
-      <Name>Selen.Wpf.GenericAppTree.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Downloads\selen\source\Selen.Wpf.GenericAppTree\Selen.Wpf.GenericAppTree.csproj">
-      <Project>{8615a3c0-298c-4b9d-8ffc-d5aca466523d}</Project>
-      <Name>Selen.Wpf.GenericAppTree</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Downloads\selen\source\Selen.Wpf.SystemStyles\Selen.Wpf.SystemStyles.csproj">
-      <Project>{a468315f-fa11-4bc2-8e5f-ea3c48b24c74}</Project>
-      <Name>Selen.Wpf.SystemStyles</Name>
-    </ProjectReference>
     <ProjectReference Include="..\GeoLib 4.0\GeoLib.csproj">
       <Project>{c5e6ed3a-59d8-4e0d-9b22-76b397432d5b}</Project>
       <Name>GeoLib</Name>
@@ -169,6 +154,22 @@
     <ProjectReference Include="..\GeoView 1.0\GeoView.csproj">
       <Project>{263192a1-5b8d-4f2b-96ad-0fba86c9f4f5}</Project>
       <Name>GeoView</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Selen.Wpf.Core\Selen.Wpf.Core.csproj">
+      <Project>{c94c1bdd-11f9-4a3f-8929-86b1b67ae1d5}</Project>
+      <Name>Selen.Wpf.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Selen.Wpf.GenericAppTree.Contracts\Selen.Wpf.GenericAppTree.Contracts.csproj">
+      <Project>{fc32ab02-5705-48e0-bcfd-78eb6c137aeb}</Project>
+      <Name>Selen.Wpf.GenericAppTree.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Selen.Wpf.GenericAppTree\Selen.Wpf.GenericAppTree.csproj">
+      <Project>{8615a3c0-298c-4b9d-8ffc-d5aca466523d}</Project>
+      <Name>Selen.Wpf.GenericAppTree</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Selen.Wpf.SystemStyles\Selen.Wpf.SystemStyles.csproj">
+      <Project>{a468315f-fa11-4bc2-8e5f-ea3c48b24c74}</Project>
+      <Name>Selen.Wpf.SystemStyles</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
