--- a/Generate/packages.config
+++ b/Generate/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net45" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
