--- a/GenerateTest/packages.config
+++ b/GenerateTest/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net45" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net45" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
 </packages>
